Fix GE Looter ground detection and priority takeover