@@ -3,12 +3,15 @@ package net.runelite.client.plugins.microbot.KSPGELooter;
 import lombok.extern.slf4j.Slf4j;
 import net.runelite.api.ItemComposition;
 import net.runelite.api.Skill;
+import net.runelite.api.TileItem;
 import net.runelite.api.coords.WorldPoint;
+import net.runelite.api.gameval.VarbitID;
 import net.runelite.client.plugins.microbot.Microbot;
 import net.runelite.client.plugins.microbot.Script;
 import net.runelite.client.plugins.microbot.api.tileitem.models.Rs2TileItemModel;
 import net.runelite.client.plugins.microbot.util.bank.Rs2Bank;
 import net.runelite.client.plugins.microbot.util.equipment.Rs2Equipment;
+import net.runelite.client.plugins.microbot.util.grandexchange.Rs2GrandExchange;
 import net.runelite.client.plugins.microbot.util.inventory.Rs2Inventory;
 import net.runelite.client.plugins.microbot.util.inventory.Rs2ItemModel;
 import net.runelite.client.plugins.microbot.util.magic.Rs2Magic;
@@ -19,6 +22,7 @@ import java.util.Comparator;
 import java.util.List;
 import java.util.Locale;
 import java.util.concurrent.TimeUnit;
+import java.util.stream.Collectors;
 
 import static net.runelite.client.plugins.microbot.util.Global.sleep;
 import static net.runelite.client.plugins.microbot.util.Global.sleepUntil;
@@ -30,6 +34,7 @@ public class KSPGELooterScript extends Script
     private static final int FIRE_RUNE_ID = 554;
     private static final long RUNE_PRICE_REFRESH_MS = 30_000L;
     private static final long HIGH_ALCH_COOLDOWN_MS = 3_000L;
+    private static final long PRIORITY_RELEASE_GRACE_MS = 1_200L;
     private static final String STAFF_OF_FIRE = "Staff of fire";
 
     public static volatile String status = "Idle";
@@ -38,6 +43,8 @@ public class KSPGELooterScript extends Script
     public static volatile long alchRuneCost;
     public static volatile int itemsLooted;
     public static volatile int itemsAlched;
+    public static volatile int groundItemsSeen;
+    public static volatile int eligibleGroundItems;
     public static volatile long totalLootGeValue;
     public static volatile long totalAlchValue;
     public static volatile long totalAlchMargin;
@@ -56,6 +63,7 @@ public class KSPGELooterScript extends Script
     private int fireRunePrice;
     private long lastRunePriceRefresh;
     private long lastAlchAt;
+    private long priorityReleaseAt;
     private boolean ownsPriorityPause;
 
     public boolean run(KSPGELooterConfig config)
@@ -66,10 +74,7 @@ public class KSPGELooterScript extends Script
             try
             {
                 boolean baseCanRun = super.run();
-                if (!baseCanRun && !ownsPriorityPause)
-                {
-                    return;
-                }
+                boolean sharedPause = Microbot.pauseAllScripts.get();
 
                 if (!Microbot.isLoggedIn())
                 {
@@ -77,12 +82,14 @@ public class KSPGELooterScript extends Script
                     return;
                 }
 
-                if (ownsPriorityPause && !Microbot.pauseAllScripts.get())
-                {
-                    ownsPriorityPause = false;
-                    priorityPauseOwned = false;
-                }
+                // A non-pause guard (blocking event/interruption) still wins. A shared pause does
+                // not stop the looter from scanning, otherwise Priority Mode can never pre-empt it.
+                if (!baseCanRun && !sharedPause && !ownsPriorityPause) return;
 
+                if (ownsPriorityPause && !sharedPause)
+                {
+                    ownsPriorityPause = priorityPauseOwned = false;
+                }
                 if (!config.priorityMode() && ownsPriorityPause)
                 {
                     releasePriorityPause("Priority Mode disabled");
@@ -93,6 +100,7 @@ public class KSPGELooterScript extends Script
                 {
                     releasePriorityPause("Outside GE area");
                     status = "OUTSIDE AREA - PAUSED";
+                    groundItemsSeen = eligibleGroundItems = 0;
                     clearTarget();
                     if (Rs2Bank.isOpen()) Rs2Bank.closeBank();
                     return;
@@ -106,33 +114,40 @@ public class KSPGELooterScript extends Script
                     if (lootTarget != null)
                     {
                         beginPriorityTakeover();
+                        priorityReleaseAt = System.currentTimeMillis() + PRIORITY_RELEASE_GRACE_MS;
                     }
-                    else
+                    else if (priorityTakeoverActive)
                     {
+                        if (System.currentTimeMillis() < priorityReleaseAt)
+                        {
+                            status = "Priority hold - confirming loot cleared";
+                            return;
+                        }
                         releasePriorityPause("No eligible loot remains");
-                        clearTarget();
-                        status = "Waiting for priority loot";
-                        updateOverlayState();
-                        return;
                     }
                 }
 
-                if (Rs2Inventory.isFull() && lootTarget != null)
+                // Respect an external/global pause unless Priority Mode has an eligible target.
+                if (!baseCanRun && !priorityTakeoverActive) return;
+
+                if (lootTarget == null)
+                {
+                    clearTarget();
+                    if (config.highAlch() && tryHighAlch()) return;
+                    status = groundItemsSeen > 0
+                            ? "Ground items seen - none eligible"
+                            : (config.priorityMode() ? "Waiting for priority loot" : "Waiting for loot");
+                    return;
+                }
+
+                if (Rs2Inventory.isFull() && !canStackIntoInventory(lootTarget))
                 {
                     if (config.highAlch() && tryHighAlch()) return;
                     bankNonRunes();
                     return;
                 }
 
-                if (lootTarget != null)
-                {
-                    spamLoot(lootTarget, config);
-                    return;
-                }
-
-                if (config.highAlch() && tryHighAlch()) return;
-                clearTarget();
-                status = "Waiting for loot";
+                spamLoot(lootTarget, config);
             }
             catch (Exception ex)
             {
@@ -151,8 +166,10 @@ public class KSPGELooterScript extends Script
         status = "Starting";
         targetName = "-";
         targetGeValue = alchRuneCost = totalLootGeValue = totalAlchValue = totalAlchMargin = 0L;
-        itemsLooted = itemsAlched = natureRuneGePrice = fireRuneGePrice = natureRunes = fireRunes = 0;
+        itemsLooted = itemsAlched = groundItemsSeen = eligibleGroundItems = 0;
+        natureRuneGePrice = fireRuneGePrice = natureRunes = fireRunes = 0;
         inventorySlotsUsed = inventoryItemCount();
+        priorityReleaseAt = lastAlchAt = lastRunePriceRefresh = 0L;
         staffOfFireEquipped = insideArea = priorityTakeoverActive = priorityPauseOwned = ownsPriorityPause = false;
     }
 
@@ -164,6 +181,7 @@ public class KSPGELooterScript extends Script
         status = "Stopped";
         clearTarget();
         alchRuneCost = 0L;
+        groundItemsSeen = eligibleGroundItems = 0;
         insideArea = priorityTakeoverActive = priorityPauseOwned = false;
     }
 
@@ -189,15 +207,17 @@ public class KSPGELooterScript extends Script
         }
         else
         {
+            // Another component already owns the shared pause. Looting may still proceed, but this
+            // plugin must never release a pause it did not acquire.
             priorityPauseOwned = false;
         }
     }
 
-    /** Releases only a shared pause this looter actually acquired. */
     private void releasePriorityPause(String reason)
     {
         priorityTakeoverActive = false;
         priorityPauseOwned = false;
+        priorityReleaseAt = 0L;
         if (!ownsPriorityPause) return;
 
         Microbot.pauseAllScripts.compareAndSet(true, false);
@@ -214,29 +234,36 @@ public class KSPGELooterScript extends Script
 
     private Rs2TileItemModel findLootTarget(int minimumGeValue)
     {
-        List<Rs2TileItemModel> candidates = Microbot.getRs2TileItemCache().query()
-                .where(Rs2TileItemModel::isLootAble)
-                .where(item -> !item.isDespawned())
-                .where(item -> KSPGELooterArea.contains(item.getWorldLocation()))
-                .where(item -> getGroundStackGeValue(item) >= minimumGeValue)
-                .toList();
+        List<Rs2TileItemModel> sceneItems = Microbot.getRs2TileItemCache().getStream()
+                .filter(item -> item != null && !item.isDespawned())
+                .filter(item -> KSPGELooterArea.contains(item.getWorldLocation()))
+                .collect(Collectors.toList());
+        groundItemsSeen = sceneItems.size();
 
-        if (candidates == null || candidates.isEmpty()) return null;
+        int accountType = accountType();
         WorldPoint player = Rs2Player.getWorldLocation();
-        candidates.sort(Comparator.comparingLong(this::getGroundStackGeValue)
-                .reversed()
-                .thenComparingInt(item -> distance(player, item.getWorldLocation())));
-        return candidates.get(0);
+        List<Rs2TileItemModel> candidates = sceneItems.stream()
+                // Mirror RuneLite's TAKEABLE ownership rule. Main accounts may take public items
+                // whose original ownership is OTHER; the old isLootAble() filter rejected them.
+                .filter(item -> item.getOwnership() != TileItem.OWNERSHIP_OTHER || accountType == 0)
+                .filter(item -> getGroundStackGeValue(item) >= minimumGeValue)
+                .sorted(Comparator.comparingLong(this::getGroundStackGeValue)
+                        .reversed()
+                        .thenComparingInt(item -> distance(player, item.getWorldLocation())))
+                .collect(Collectors.toList());
+        eligibleGroundItems = candidates.size();
+        return candidates.isEmpty() ? null : candidates.get(0);
     }
 
     private void spamLoot(Rs2TileItemModel item, KSPGELooterConfig config)
     {
         if (item == null || !KSPGELooterArea.contains(item.getWorldLocation())) return;
+        if (!prepareLootUi()) return;
 
         int clicks = clamp(config.spamClicks(), 1, 12);
         int delay = clamp(config.spamDelayMs(), 30, 250);
         int itemId = item.getId();
-        int beforeQuantity = Rs2Inventory.count(itemId);
+        int beforeQuantity = Rs2Inventory.itemQuantity(itemId);
         int unitGePrice = getGePrice(itemId);
 
         targetName = safeName(item);
@@ -246,7 +273,6 @@ public class KSPGELooterScript extends Script
         for (int i = 0; i < clicks; i++)
         {
             if (!Microbot.isLoggedIn()) return;
-
             WorldPoint player = Rs2Player.getWorldLocation();
             if (!KSPGELooterArea.contains(player))
             {
@@ -260,20 +286,49 @@ public class KSPGELooterScript extends Script
             if (i + 1 < clicks) sleep(delay);
         }
 
-        sleepUntil(() -> Rs2Inventory.count(itemId) > beforeQuantity, 900);
-        int gained = Math.max(0, Rs2Inventory.count(itemId) - beforeQuantity);
+        sleepUntil(() -> Rs2Inventory.itemQuantity(itemId) > beforeQuantity, 900);
+        int gained = Math.max(0, Rs2Inventory.itemQuantity(itemId) - beforeQuantity);
         if (gained > 0)
         {
             itemsLooted += gained;
             totalLootGeValue += (long) unitGePrice * gained;
+            priorityReleaseAt = System.currentTimeMillis() + PRIORITY_RELEASE_GRACE_MS;
         }
         updateOverlayState();
+    }
+
+    private boolean prepareLootUi()
+    {
+        if (Rs2Bank.isOpen())
+        {
+            status = "Closing bank for priority loot";
+            Rs2Bank.closeBank();
+            if (!sleepUntil(() -> !Rs2Bank.isOpen(), 1_500)) return false;
+        }
+        if (Rs2GrandExchange.isOpen())
+        {
+            status = "Closing GE for priority loot";
+            Rs2GrandExchange.closeExchange();
+            if (!sleepUntil(() -> !Rs2GrandExchange.isOpen(), 1_500)) return false;
+        }
+        return true;
+    }
+
+    private boolean canStackIntoInventory(Rs2TileItemModel item)
+    {
+        try
+        {
+            return item != null && item.isStackable() && Rs2Inventory.itemQuantity(item.getId()) > 0;
+        }
+        catch (Exception ignored)
+        {
+            return false;
+        }
     }
 
     private boolean tryHighAlch()
     {
         if (System.currentTimeMillis() - lastAlchAt < HIGH_ALCH_COOLDOWN_MS) return false;
-
         if (Microbot.getClient().getRealSkillLevel(Skill.MAGIC) < 55)
         {
             status = "High Alch requires 55 Magic";
@@ -284,18 +339,17 @@ public class KSPGELooterScript extends Script
         boolean fireStaff = hasFireRuneStaff();
         long runeCost = calculateHighAlchRuneCost(fireStaff);
         alchRuneCost = runeCost;
-
         if (runeCost <= 0L)
         {
             status = "Waiting for rune GE prices";
             return false;
         }
-        if (Rs2Inventory.count("Nature rune") < 1)
+        if (Rs2Inventory.itemQuantity(NATURE_RUNE_ID) < 1)
         {
             status = "No Nature runes";
             return false;
         }
-        if (!fireStaff && Rs2Inventory.count("Fire rune") < 5)
+        if (!fireStaff && Rs2Inventory.itemQuantity(FIRE_RUNE_ID) < 5)
         {
             status = "Need 5 Fire runes";
             return false;
@@ -309,7 +363,7 @@ public class KSPGELooterScript extends Script
             return false;
         }
 
-        int beforeCount = Rs2Inventory.count(target.getId());
+        int beforeCount = Rs2Inventory.itemQuantity(target.getId());
         String name = target.getName();
         int highAlchValue = getHighAlchValue(target.getId());
         long alchMargin = Math.max(0L, (long) highAlchValue - runeCost);
@@ -320,7 +374,7 @@ public class KSPGELooterScript extends Script
         lastAlchAt = System.currentTimeMillis();
         Rs2Magic.alch(target, 60, 120);
 
-        if (sleepUntil(() -> Rs2Inventory.count(target.getId()) < beforeCount, 2_500))
+        if (sleepUntil(() -> Rs2Inventory.itemQuantity(target.getId()) < beforeCount, 2_500))
         {
             itemsAlched++;
             totalAlchValue += highAlchValue;
@@ -343,24 +397,18 @@ public class KSPGELooterScript extends Script
 
     private boolean bankNonRunes()
     {
-        if (Rs2Bank.isOpen())
-        {
-            status = "Waiting for shared bank";
-            return false;
-        }
-
         boolean releaseBankPause = acquireBankPause();
         try
         {
-            if (Rs2Bank.isOpen())
-            {
-                status = "Waiting for shared bank";
-                return false;
-            }
             if (!KSPGELooterArea.contains(Rs2Player.getWorldLocation()))
             {
                 status = "OUTSIDE AREA - PAUSED";
                 return false;
+            }
+            if (Rs2GrandExchange.isOpen())
+            {
+                Rs2GrandExchange.closeExchange();
+                if (!sleepUntil(() -> !Rs2GrandExchange.isOpen(), 1_500)) return false;
             }
 
             status = "Opening GE bank";
@@ -392,13 +440,6 @@ public class KSPGELooterScript extends Script
 
             sleepUntil(() -> !Rs2Inventory.isFull(), 2_000);
             Rs2Bank.closeBank();
-
-            if (!KSPGELooterArea.contains(Rs2Player.getWorldLocation()))
-            {
-                status = "OUTSIDE AREA - PAUSED";
-                return false;
-            }
-
             status = "Returning to looting";
             return true;
         }
@@ -457,6 +498,13 @@ public class KSPGELooterScript extends Script
         return item == null ? 0L : Math.max(0L, (long) getGePrice(item.getId()) * Math.max(1, item.getQuantity()));
     }
 
+    private int accountType()
+    {
+        return Microbot.getClientThread()
+                .runOnClientThreadOptional(() -> Microbot.getClient().getVarbitValue(VarbitID.IRONMAN))
+                .orElse(0);
+    }
+
     private static boolean isRune(String name)
     {
         if (name == null) return false;
@@ -487,8 +535,8 @@ public class KSPGELooterScript extends Script
     {
         insideArea = KSPGELooterArea.contains(Rs2Player.getWorldLocation());
         inventorySlotsUsed = inventoryItemCount();
-        natureRunes = Rs2Inventory.count("Nature rune");
-        fireRunes = Rs2Inventory.count("Fire rune");
+        natureRunes = Rs2Inventory.itemQuantity(NATURE_RUNE_ID);
+        fireRunes = Rs2Inventory.itemQuantity(FIRE_RUNE_ID);
         staffOfFireEquipped = hasFireRuneStaff();
     }
 }
